# ai_agent

./: .env.sample  .gitignore  CLAUDE.md  README.md  agents.py  blog.py  chef.py  competitors_task.md  healthy_recipe.md  inspiration_task.md  main.py  models.py  pyproject.toml  script_task.md  selection_task.md  tasks.py  tools.py
tutorials/: blog_post.json  ideas_task.md  normal_recipe.md  youtube.py
