[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.157.0",
    "crewai-tools>=0.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "langsmith>=0.4.13",
    "openai>=1.99.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.10.0",
    "yfinance>=0.2.65",
]
