[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=0.157.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.2.1,<0.3.0",
    "langchain-text-splitters>=0.3.9",
    "langsmith>=0.3.18,<0.4.0",
    "openai>=1.99.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.8.0",
    "yfinance>=0.2.65",
]
